fix: some functionalities were not working on iphone.

--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -2,19 +2,19 @@
 
 .cart-component {
     border-left: 2px solid rgba(var(--app-main-color-rgb), 0.7);
-    grid-template-rows: auto 40px 40px;
     transition: all 0.35s ease-out;
+    flex-direction: column;
     margin-right: -100%;
     background-color: #ffffff;
     box-shadow: -1px 0px 4px 1px rgba(0, 0, 0, 0.3);
 
     &.open {
-        display: grid;
+        display: flex;
         margin-right: 0;
     }
 
     > .items {
-        grid-row: 1;
+        flex: 1 1;
         overflow-y: auto;
     }
 
@@ -24,7 +24,7 @@
         font-family: 'Roboto Mono', monospace;
         font-size: 20px;
         font-weight: bold;
-        grid-row: 2;
+        flex: 0 0 40px;
         height: 100%;
         justify-content: flex-end;
         letter-spacing: -1.7px;
@@ -34,12 +34,12 @@
     }
 
     > .button-component {
-        grid-row: 3;
+        flex: 0 0 40px;
         border-radius: 5px 5px 0px 0px;
     }
 
     @include small() {
-        display: grid;
+        display: flex;
         margin-right: 0;
     }
 }
